--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />    
     <title>Barcode scanner demo</title>
+    <script src="./public/barcode-scanner.wasm"></script>
   <script defer src="main.js"></script></head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
